refactor: skuStatus - soldout 대신 paused 도입